Insert valid img tag for XHTML documents.

BUG: 118805